# cli-ai

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
cli_ai/: __init__.py  agent.py  config_file.py  main.py  prompts.py  tools.py
cli_ai/llm/: __init__.py  config.py  manager.py  provider_factory.py  utils.py
cli_ai/llm/providers/: __init__.py  base_provider.py  groq_provider.py
shell/: cli_ai.zsh
tests/: test_config_file.py
